[gd_scene load_steps=13 format=2]

[ext_resource path="res://Characters/Enemies/Purple Goblin/PurpleGoblin.gd" type="Script" id=1]
[ext_resource path="res://Audio/Jump.wav" type="AudioStream" id=2]
[ext_resource path="res://Characters/Enemies/Purple Goblin/Purple Goblin.png" type="Texture" id=3]
[ext_resource path="res://Characters/Enemies/Purple Goblin/walk 1.png" type="Texture" id=4]
[ext_resource path="res://Characters/Enemies/Purple Goblin/walk 2.png" type="Texture" id=5]
[ext_resource path="res://Characters/Enemies/Purple Goblin/walk 3.png" type="Texture" id=6]
[ext_resource path="res://Characters/Enemies/Purple Goblin/walk 4.png" type="Texture" id=7]
[ext_resource path="res://Characters/Enemies/Purple Goblin/jump 1.png" type="Texture" id=8]
[ext_resource path="res://Characters/Enemies/Purple Goblin/jump 2.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 14.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.17213
height = 15.4554

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.1399, 16.325 )

[node name="PurpleGoblin" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
bus = "Much Lower Volume"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.21202, 0.330551 )
shape = SubResource( 2 )

[node name="AreaBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBox"]
visible = false
position = Vector2( 0, 1.90735e-006 )
shape = SubResource( 3 )

[node name="JumpTime" type="Timer" parent="."]
[connection signal="body_entered" from="AreaBox" to="." method="_on_AreaBox_body_entered"]
[connection signal="timeout" from="JumpTime" to="." method="_on_JumpTime_timeout"]
